# slidespeak-streamable-mcp

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  client.py  pyproject.toml
src/: __init__.py  server.py
src/constants/: enum.py  schema.py
src/helper/: config.py
src/services/: slidespeak_provider.py
